Fix to policy filter page to use topics
Add topics to JSON/index view, and add some extra spacing between the
results and the filter.

https://www.pivotaltracker.com/story/show/35187489

--- a/app/assets/stylesheets/frontend/views/_policies.scss
+++ b/app/assets/stylesheets/frontend/views/_policies.scss
@@ -28,6 +28,10 @@
       }
     }
   }
+
+  .filter-results {
+    margin: $gutter 0;
+  }
 }
 
 .policy {
